[package]
name = "anna"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
datafusion = { version = "24.0.0", features = ["simd"] }
async-trait = "0.1.68"
log = "0.4.17"
ordered-float = "3.7.0"
rand = "0.8.5"
roaring = "0.10.1"
temp-dir = "0.1.11"
tokio = { version = "1.28.0", features = ["full"] }

[dev-dependencies]
criterion = { version = "0.4.0", features = ["async_tokio", "html_reports"] }

[[bench]]
name = "main"
harness = false
